# python-crc64fast

./: .gitignore  Cargo.toml  NOTICE  pyproject.toml
.github/workflows/: publish.yml
python/crc64fast.egg-info/: PKG-INFO  SOURCES.txt
rust/: lib.rs
